force-app/main/default/objects/SupplyItem__c/SupplyItem__c.object-meta.xml
<CustomObject>
    <label>仕入商品</label>
    <nameField>
        <label>仕入商品名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>