force-app/main/default/objects/SupplyItem__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>仕入商品</relationshipLabel>
    <relationshipName>AccountgWh4</relationshipName>
    <type>Lookup</type>
</CustomField>