force-app/main/default/objects/SupplyItem__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>納入商品</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>仕入商品</relationshipLabel>
    <relationshipName>Asset0uob</relationshipName>
    <type>Lookup</type>
</CustomField>