force-app/main/default/objects/SupplyItem__c/fields/isDeadStock__c.field-meta.xml
<CustomField>
    <fullName>isDeadStock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>不良在庫flg</label>
    <type>Checkbox</type>
</CustomField>