force-app/main/default/objects/SupplyItem__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <label>仕入商品No</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>