force-app/main/default/objects/SupplyItem__c/fields/ProductItem__c.field-meta.xml
<CustomField>
    <fullName>ProductItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>仕入商品</relationshipLabel>
    <relationshipName>ProductItemBnS1</relationshipName>
    <type>Lookup</type>
</CustomField>