force-app/main/default/objects/SupplyItem__c/fields/SelectedAsset__c.field-meta.xml
<CustomField>
    <fullName>SelectedAsset__c</fullName>
    <formula>NOT(ISBLANK(Asset__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>納入商品指定済</label>
    <type>Checkbox</type>
</CustomField>