force-app/main/default/objects/SupplyItem__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>シリアル番号</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>