force-app/main/default/objects/SupplyItem__c/fields/ShippingDate__c.field-meta.xml
<CustomField>
    <fullName>ShippingDate__c</fullName>
    <label>出荷日</label>
    <type>Date</type>
</CustomField>