force-app/main/default/objects/SupplyItem__c/fields/SupplyDate__c.field-meta.xml
<CustomField>
    <fullName>SupplyDate__c</fullName>
    <label>仕入日</label>
    <type>Date</type>
</CustomField>