force-app/main/default/objects/SupplyItem__c/fields/SyncFlg__c.field-meta.xml
<CustomField>
    <fullName>SyncFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>同期フラグ</label>
    <type>Checkbox</type>
</CustomField>