force-app/main/default/objects/SupplyItem__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>テスト</label>
    <type>Checkbox</type>
</CustomField>