force-app/main/default/objects/SupplyItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>SupplyDate__c</columns>
    <columns>ShippingDate__c</columns>
    <columns>No__c</columns>
    <columns>SerialNumber__c</columns>
    <columns>Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>