force-app/main/default/objects/SupplyItem__c/listViews/Matterport_Axisfff.listView-meta.xml
<ListView>
    <fullName>Matterport_Axisfff</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>SupplyDate__c</columns>
    <columns>ShippingDate__c</columns>
    <columns>No__c</columns>
    <columns>SerialNumber__c</columns>
    <columns>Asset__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Matterport Axisセット</value>
    </filters>
    <label>Matterport Axisセット</label>
    <sharedTo>
        <role>UserRole_Solution</role>
    </sharedTo>
</ListView>